--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <link href="css/styles.css" rel="stylesheet" type="text/css" />
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="index.js"></script>
     <title>Make a better world!</title>
@@ -14,8 +14,8 @@
       <nav id="Nav">
         <ul id="Menu">
           <li class="MI0"><a href="/">home</a></li>
-          <li class="MI0"><a href="/download">download</a></li>
-          <li class="MI0"><a href="/export">export</a></li>
+          <li class="MI0"><a href="/download/">download</a></li>
+          <li class="MI0"><a href="/translation/export">export</a></li>
         </ul>
       </nav>
     </header>
